Fix form resubmissions losing the Content-Type header with PlzNavigate.

A form resubmit gets the POST data from the serialized content::PageState that was sent by the renderer after the original post. There are two parts to this fix:
1) when the first form submit commits, the browser should send the renderer the Content-Type header. Since this is with PlzNavigate, the renderer doesn't actually use it. However, it will send it back along with the post body in  content::PageState.
2) when the (browser-initiated) form resubmit occurs, the browser needs to extract the Content-Type header from the serialized content::PageState and add it to the list of request headers.

BUG=747812

Cq-Include-Trybots: master.tryserver.chromium.linux:linux_site_isolation
Change-Id: Idf1fcc6efe32b948c6fea7e7a5dc5ba06c2d9c26
Reviewed-on: https://chromium-review.googlesource.com/618298
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495188}
Former-commit-id: 7dfbcccf5e6fe580bd9e12a5841ef28bcee36de7